fixes gallery images overflowing in mobile

--- a/src/Components/Gallery/Gallery.module.css
+++ b/src/Components/Gallery/Gallery.module.css
@@ -6,8 +6,8 @@
 }
 
 .image {
+  max-width: 100%;
   width: 100%;
-  height: auto;
 }
 
 .ImageWrap {
@@ -46,6 +46,6 @@
 
 @media (max-width: 1300px) {
   .Gallery {
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   }
 }
